tests/ui/substrate/definition/fail_incorrect_id.stderr
error: id should be integer or string
 --> tests/ui/substrate/definition/fail_incorrect_id.rs:1:20
  |
1 | #[obce::definition(id = false)]
  |                    ^^^^^^^^^^
