tests/ui/substrate/definition/fail_incorrect_id.rs
#[obce::definition(id = false)]
pub trait Trait {}

fn main() {}
